--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <script src="style/ie.js"></script>
     <![endif]-->
     <!-- Android  -->
+    <link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/icons/favicon.ico" type="image/x-icon">
+
     <meta name="theme_color" content="#484B4E">
   </head>
   <body>
